--- a/css/proposal.css
+++ b/css/proposal.css
@@ -37,7 +37,7 @@ h1 {
 
 /* Subsection headers styling */
 h2 {
-    font-family: 'Times New Roman', Times, serif;
+    font-family: 'Arial', Times, serif;
     margin: 20px 0;
     font-size: 1.5rem;
 }
