--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,15 @@ h1 {
     padding-right: 2rem;
 }
 
+.myTeam h3 {
+    margin-bottom: .5rem;
+}
+
+.myTeam p {
+    text-align: center;
+    margin-top: .5rem;
+}
+
 .myTeamSummary {
     display: flex;
 }
@@ -93,6 +102,15 @@ h1 {
     padding-left: 2rem;
 }
 
+.dash-tabs button {
+    
+}
+
+.dashcontent {
+    display: none;
+    padding: 6px 12px;
+    border-top: none;
+  }
 /*  End of Homepage (index.html) styling content */
 
 /* Styling for login page */
