--- a/css/style.css
+++ b/css/style.css
@@ -71,6 +71,10 @@ h1 {
     padding: 1rem;
 }
 
+.myTeamSummary p {
+    text-align: center;
+}
+
 .dashboardContainer {
     background-color: rgb(224, 240, 230);
     font-family: "Hind", sans-serif;
@@ -94,7 +98,6 @@ h1 {
 .dashboard div {
     padding-left: 2rem;
 }
-
 /*  End of Homepage (index.html) styling content */
 
 /* Styling for login page */
@@ -197,6 +200,7 @@ footer {
     .homeHeader h1 {
         color: beige;
         padding-bottom: 3rem;
+        padding-left: 1rem;
     }
 }
 
