--- a/src/index.css
+++ b/src/index.css
@@ -228,6 +228,27 @@ table img {
     margin-bottom: 5px;
 }
 
+#playerForm {
+    display: flex;
+    flex-direction: column;
+}
+
+#playerForm div {
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    margin-bottom: 1rem;
+    
+}
+
+#playerForm button {
+    background-color: rgb(16, 129, 1);
+    color: #fffcd7;
+    padding: .5rem 1rem;
+    margin: 0rem .5rem;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
 
 footer {
     text-align: left;
@@ -240,7 +261,10 @@ footer {
     }
     nav li{
         width: 90px;
-    } 
+    }
+    #playerForm div {
+        margin-left: 2rem;
+    }
 }
 
 /* Styling for MEDIUM screens (768px+) */
@@ -260,6 +284,17 @@ footer {
     }
     .player-card {
         margin: 15px;
+    }
+    #playerForm {
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+    #playerForm div {
+        margin: 1rem;
+
+    }
+    #playerForm button {
+        margin: 1rem 0;
     }
 }
 
