--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,17 @@ nav {
     top: 0;
     background-color: rgb(46, 118, 53);
     display: flex;
+    justify-content: space-between;
+}
+
+nav .icon {
+    font-size: 3rem;
+    padding: 0.25rem 0.5rem;
 }
 
 nav ul {
-    display: flex;
+    display: none;
+    flex-direction: column;
     padding-left: 0;
 }
 
@@ -41,7 +48,7 @@ nav a {
 /* end of navbar styling */
 
 h1 {
-    padding-top: 3rem;
+    padding-top: 3.5rem;
     font-family: "Outfit", sans-serif;
 }
 
@@ -271,11 +278,22 @@ footer {
 
 /* Styling for SMALL screens (598px+) */
 @media(min-width:598px){
+    nav {
+        justify-content: left;
+    }
+    nav .icon {
+        display: none;
+    }
     nav ul {
+        display: flex;
+        flex-direction: row;
         padding-left: 40px;
     }
     nav li{
         width: 90px;
+    }
+    h1 {
+        padding-top: 3rem;
     }
     .myTeam {
         padding: 1rem;
