--- a/src/index.css
+++ b/src/index.css
@@ -249,7 +249,24 @@ table img {
     color: #666; /* Slightly lighter text for less important details */
     margin-bottom: 5px;
 }
+.player-select-dropdown select {
+    width: 200px;
+    padding: 8px;
+    margin: 5px 0;
+    border: 2px solid #007bff;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: white;
+    cursor: pointer;
+}
 
+.player-select-dropdown  select:hover {
+    background-color: #f2f2f2;
+}
+
+.player-select-dropdown select:focus {
+    border-color: #0056b3;
+}
 #playerForm {
     display: flex;
     flex-direction: column;
@@ -276,6 +293,7 @@ footer {
     font-size: 0.7rem;
     text-align: left;
 }
+
 
 /* Styling for SMALL screens (598px+) */
 @media(min-width:598px){
