--- a/src/index.css
+++ b/src/index.css
@@ -267,6 +267,12 @@ table img {
 .player-select-dropdown select:focus {
     border-color: #0056b3;
 }
+
+.dropdown-label {
+    font-family: 'Arial', sans-serif; 
+    font-size: 16px; 
+    font-weight: bold; 
+}
 #playerForm {
     display: flex;
     flex-direction: column;
