--- a/src/index.css
+++ b/src/index.css
@@ -72,6 +72,10 @@ nav a {
     opacity: 90%;
 }
 
+.mobileLinks li {
+    height: 1.5rem;
+}
+
 .mobileLinks a {
     color: beige;
     text-decoration: none;
