--- a/src/index.css
+++ b/src/index.css
@@ -245,8 +245,24 @@ table img {
     margin-right: auto;
 }
 
+.players-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr)); /* Increase the min-width as needed */
+    grid-gap: 10px; /* Space between cards */
+    justify-items: center;
+    align-content: start;
+    padding: 10px;
+}
+
+
 /* Styles for the player card */
 .player-card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* Example shadow */
+    width: 100%; /* Ensure the card expands to fill the grid column */
+    min-width: 200px; /* Prevent the card from being too narrow */
+    width: calc(33.3% - 20px);
+    margin: 10px; /* Margin for spacing around the cards */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
     border: 1px solid #ddd; /* Light grey border */
     border-radius: 10px; /* Rounded corners */
     overflow: hidden; /* Ensures the content fits within the borders */
