--- a/src/index.css
+++ b/src/index.css
@@ -51,10 +51,30 @@ nav img {
     max-height: 50px;
 }
 
+nav li img {
+    max-height: 30px;
+    border-radius: 30%;
+}
+
 nav a {
     color: beige;
     text-decoration: none;
     font-family: "Public Sans", sans-serif;
+}
+
+/* WORKING HERE */
+nav li a{
+    top: auto;
+    bottom: auto;
+}
+
+nav button{
+    background-color: rgb(37, 147, 22);
+    color: #fffcd7;
+    padding: .5rem 1rem;
+    margin: 0rem .5rem;
+    border-radius: 5px;
+    transition-duration: 0.4s;
 }
 
 .mobileLinks {
@@ -397,6 +417,9 @@ footer a {
     }
     nav li{
         width: 90px;
+    }
+    nav li a{
+        text-align: center;
     }
     main {
         margin: 1rem;
