profile page -- edit realtime database user data

--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,22 @@ h1 {
     font-family: "Outfit", sans-serif;
 }
 
+h2 {
+    font-family: "Outfit", sans-serif;
+}
+
+p {
+    font-family: "Public Sans", sans-serif;
+}
+
+td {
+    font-family: "Public Sans", sans-serif;
+}
+
+th {
+    font-family: "Public Sans", sans-serif;
+}
+
 /* Styling for Homepage (index.html) content */
 .myTeam {
     display: flex;
@@ -398,6 +414,23 @@ table img {
     color: #fffcd7;
     padding: .5rem 1rem;
     margin: 0rem .5rem;
+    border-radius: 5px;
+    transition-duration: 0.4s;
+}
+
+.info-label label {
+    font-family: "Public Sans", sans-serif;
+}
+
+.info-label input {
+    font-family: "Public Sans", sans-serif;
+}
+
+.profileBtn {
+    background-color: rgb(16, 129, 1);
+    color: #fffcd7;
+    padding: .5rem 1rem;
+    /* margin-left: 20%; */
     border-radius: 5px;
     transition-duration: 0.4s;
 }
